:sparkles: feat: Adiciona rota de exclusão de pedido
